fix(lazy-image): fix image stretch on safari (DA_UK-379)

--- a/packages/components/lazy-image/src/lazy-image.module.css
+++ b/packages/components/lazy-image/src/lazy-image.module.css
@@ -2,6 +2,7 @@
   background-color: var(--color-shade-light);
   display: flex;
   width: 100%;
+  align-items: center;
 }
 
 .lazy {
